--- a/pages/volunteer/activity.wxml
+++ b/pages/volunteer/activity.wxml
@@ -25,9 +25,12 @@
   <view class='ul'>
     <view><text>报名状态</text>{{filter.joinStatus(activity.join_status)}}</view>
     <view><text>签到状态</text>{{filter.signStatus(activity.sign_status)}}</view>
-    <view><text>新增活跃</text>{{activity.amount}} / {{activity.time}}</view>
+    <!-- <view><text>新增活跃</text>{{activity.amount}} / {{activity.time}}</view> -->
   </view>
-  <view class='center mt20' wx:if="{{activity.join_status == 2 && activity.status == 1}}">
+  <view class='center mt20 padding' wx:if="{{activity.join_status == 1}}">
+    <button class='cu-btn bg-orange round shadow w100' bindtap="apply">加入服务队</button>
+  </view>
+  <view class='center mt20 padding' wx:if="{{activity.join_status == 2 && activity.status == 1}}">
     <button class='cu-btn bg-orange round shadow w100' bindtap="join">我要报名</button>
   </view>
 </view>
