--- a/pages/news/content.wxml
+++ b/pages/news/content.wxml
@@ -11,7 +11,7 @@
         <text>{{info.volunteer_name}}</text>
       </view>
       <view class="fr" wx:if="{{info.activity_id != '0'}}">
-        <button class=" cu-btn round xs bg-orange" style="margin-top: 22rpx;" bindtap="look">查看</button>
+        <button class=" cu-btn round sm bg-orange" style="margin-top: 16rpx;" bindtap="look">查看</button>
       </view>
     </view>
   </view>
@@ -21,7 +21,7 @@
       <template is="wxParse" data="{{wxParseData:article.nodes}}" />
     </block>
     <block wx:else>
-      <image wx:for="{{info.image}}" wx:key="{{item.id}}" src="{{item.img}}"/>
+      <image wx:for="{{info.image}}" wx:key="{{item.id}}" src="{{item.img}}" style="width: 100%;"/>
     </block>
   </view>
 </view>
