--- a/pages/orderMeal/orderDetail.wxml
+++ b/pages/orderMeal/orderDetail.wxml
@@ -1,4 +1,4 @@
-<view class="container padding order">
+<view class="container padding order" style="padding-bottom: 116rpx;">
   <view class='text-bold text-xl text-black mb20'>{{order.name}}</view>
   <view class='fr'>
     <wxs src="../../utils/filter.wxs" module="filter"></wxs>
@@ -28,6 +28,6 @@
 </view>
 <view class="bg-white padding" style="position: fixed;bottom: 0;box-shadow: 0 -2px 5rpx #ddd;width: 100%;" wx:if="{{order.user_id == userId}}">
   <input value="{{ evaluate }}" bindinput="bindKeyInput" placeholder="发表评价" />
-  <button class='cu-btn bg-orange round sm shadow fr' bindtap="publish">发表</button>
+  <button class='cu-btn bg-orange round shadow fr' bindtap="publish">发表</button>
 </view>
 <i-toast id="toast" />
