--- a/pages/orderMeal/orderStart.wxml
+++ b/pages/orderMeal/orderStart.wxml
@@ -7,6 +7,6 @@
     <i-input value="{{ desc }}" name="desc" title="内容" placeholder="请输入活动内容" />
   </view>
   <view class="padding">
-    <button class="cu-btn bg-orange round shadow w100" form-type="submit">确定提交</button>
+    <button class="cu-btn bg-orange lg round shadow w100" form-type="submit">确定提交</button>
   </view>
 </form>
