--- a/pages/personal/info.wxss
+++ b/pages/personal/info.wxss
@@ -19,3 +19,15 @@
   font-size: 14px;
   overflow: hidden;
 }
+
+checkbox-group {
+  flex: 1;
+  font-size: 28rpx;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.checkbox {
+  width: 50%;
+  padding: 10rpx 0;
+}
