--- a/pages/orderMeal/orderDetail.wxml
+++ b/pages/orderMeal/orderDetail.wxml
@@ -27,6 +27,13 @@
     {{order.comment}}
   </view>
 </view>
+<button 
+  wx:if="{{isLeader && order.status == 2}}" 
+  class="cu-btn bg-orange lg icon" 
+  bindtap="toStartActivity" 
+  style="position: fixed;bottom: 60rpx;right: 40rpx;">
+  <text class="cuIcon-add" style="font-size: 38rpx;"></text>
+</button>
 <view class="bg-white padding" style="position: fixed;bottom: 0;box-shadow: 0 -2px 5rpx #ddd;width: 100%;" wx:if="{{order.user_id == userId}}">
   <input value="{{ evaluate }}" bindinput="bindKeyInput" placeholder="发表评价" />
   <button class='cu-btn bg-orange round shadow fr' bindtap="publish">发表</button>
