--- a/pages/civilizationMap/civilizationMap.wxml
+++ b/pages/civilizationMap/civilizationMap.wxml
@@ -1,11 +1,16 @@
-<view style="position: fixed;height: 100%;width: 100%;padding-bottom:268rpx;">
+<view style="position: fixed;height: 100%;width: 100%;padding-bottom:{{volunteer_status == 2 ? 438 : 278}}rpx;">
   <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="12" markers="{{markers}}" bindmarkertap="markertap" show-location style="width: 100%; height: 100%;"></map>
 </view>
-<view class="flex bg-white w100" style="position:fixed;bottom:0;height: 268rpx;padding: 34rpx;">
-  <navigator class="flex-sub radius" style="margin-right: 14rpx;height: 100%;" url="./hall">
-    <image class="w100" src="/static/litang.png" style="height: 100%;"></image>
-  </navigator>
-  <navigator class="flex-sub radius" style="margin-left: 14rpx;height: 100%;" url="./team">
-    <image class="w100" src="/static/team.png" style="height: 100%;"></image>
+<view class="w100 bg-white" style="position:fixed;bottom:0;padding: 34rpx;">
+  <view class="flex w100" style="height: 214rpx;">
+    <navigator class="flex-sub radius" style="margin-right: 14rpx;height: 95%;" url="./hall">
+      <image class="w100" src="/static/litang.png" style="height: 100%;"></image>
+    </navigator>
+    <navigator class="flex-sub radius" style="margin-left: 14rpx;height: 95%;" url="./team">
+      <image class="w100" src="/static/team.png" style="height: 100%;"></image>
+    </navigator>
+  </view>
+  <navigator wx:if="{{volunteer_status == 2}}" class="radius w100 mt20" style="height: 140rpx;" url="../orderMeal/orderStart">
+    <image class="w100" src="/static/diandan.png" style="height: 100%;"></image>
   </navigator>
 </view>
