--- a/pages/personal/personal.wxml
+++ b/pages/personal/personal.wxml
@@ -24,22 +24,42 @@
       <view class="text-xs text-grey mt20">已超过{{userInfo.rank}}%的志愿者</view>
     </view>
   </view>
-  <view class="padding bg-main">
-    <view class='text-sm text-grey' style='padding-bottom: 20rpx;'>我的队伍</view>
-    <view class='team-list' wx:for="{{teamList}}" wx:key="{{item.id}}">
-      <view class='user-info'>
-        <image class='cu-avatar round' src="{{item.avatar || defaultAvatar}}"></image>
-        <text>{{item.team_name}}</text>
-      </view>
-      <view class='overhidden mt20'>
-        <view class='cu-tag round'>我获得的活跃度 | {{item.point}}</view>
-        <view class='fr cu-tag {{item.status == 1 ? "bg-orange" : "bg-green"}}' style="border-radius: 7rpx;">
-          {{item.status == 1 ? '申请中' : '通过'}}
+  <i-tabs current="{{ current }}" bindchange="handleChange">
+    <i-tab key="tab1" title="我的队伍"></i-tab>
+    <i-tab key="tab2" title="我的点单"></i-tab>
+  </i-tabs>
+  <view class="padding bg-main" style="padding-bottom: 142rpx;">
+    <block wx:if="{{current == 'tab1'}}">
+      <view class='team-list' wx:for="{{teamList}}" wx:key="{{item.id}}">
+        <view class='user-info'>
+          <image class='cu-avatar round' src="{{item.avatar || defaultAvatar}}"></image>
+          <text>{{item.team_name}}</text>
+        </view>
+        <view class='overhidden mt20'>
+          <view class='cu-tag round'>我获得的活跃度 | {{item.point}}</view>
+          <view class='fr cu-tag {{item.status == 1 ? "bg-orange" : "bg-green"}}' style="border-radius: 7rpx;">
+            {{item.status == 1 ? '申请中' : '通过'}}
+          </view>
         </view>
       </view>
-    </view>
-    <view class="padding flex flex-direction mt20">
-      <button class="cu-btn bg-orange lg w100 round" bindtap='toActive'>找活动加队伍</button>
-    </view>
+    </block>
+    <block wx:if="{{current == 'tab2'}}">
+      <navigator wx:for="{{orderList}}" wx:key="{{item.id}}" url='../orderMeal/orderDetail?id={{item.id}}'>
+          <view class='activity-list'>
+            <view class='text-lg text-black' style="line-height: 2;">{{item.name}}</view>
+            <view class="overhidden">
+              <view class='cu-tag round'>提交时间：{{item.crtime}}</view>
+              <wxs src="../../utils/filter.wxs" module="filter"></wxs>
+              <view class='cu-tag fr {{filter.toActivityClass(item.status)}}'>
+                {{filter.orderStatus(item.status)}}
+              </view>
+            </view>
+          </view>
+        </navigator>
+    </block>
+  </view>
+  <view class="w100 padding bg-white" style="position: fixed;bottom: 0;">
+    <button hidden="{{current == 'tab2'}}" class="cu-btn bg-orange lg w100 round" bindtap='toActive'>找活动加队伍</button>
+    <button hidden="{{current == 'tab1'}}" class="cu-btn bg-orange lg w100 round" bindtap="toAdd">我要点单</button>
   </view>
 </view>
