--- a/pages/volunteer/activity.wxml
+++ b/pages/volunteer/activity.wxml
@@ -12,14 +12,15 @@
   <view class='ul'>
     <view><text>活动地点</text>{{activity.address}}</view>
     <view><text>报名上限</text>{{activity.max}}人</view>
-    <view><text>服务时长</text>{{activity.time}}小时</view>
+    <view><text>服务时长</text>{{activity.time}}分钟</view>
     <view><text>开始时间</text>{{activity.start_time}}</view>
     <view><text>结束时间</text>{{activity.end_time}}</view>
   </view>
   <view class='module-title'>[ 活动内容 ]</view>
   <view class='ul'>
-    <import src="/wxParse/wxParse.wxml" />
-    <template is="wxParse" data="{{wxParseData:article.nodes}}" />
+    {{activity.desc}}
+    <!-- <import src="/wxParse/wxParse.wxml" />
+    <template is="wxParse" data="{{wxParseData:article.nodes}}" /> -->
   </view>
   <view class='module-title'>[ 我的活动状态 ]</view>
   <view class='ul'>
