--- a/pages/volunteer/activityStart.wxss
+++ b/pages/volunteer/activityStart.wxss
@@ -7,6 +7,7 @@
 .i-input {
   padding: 7px 15px;
   color: #495060;
+  border-bottom:1px solid #e9eaec;
 }
 
 .i-cell {
@@ -18,4 +19,16 @@
   line-height: 1.4;
   font-size: 14px;
   overflow: hidden;
+}
+
+checkbox-group {
+  flex: 1;
+  font-size: 28rpx;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.checkbox {
+  width: 50%;
+  padding: 10rpx 0;
 }
