--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -89,7 +89,7 @@ var volunteerStatus = function (value) {
     case 1:
       return '待审核';
     case 2:
-      return '已通过';
+      return '已认证';
   }
 }
 var toTeamClass = function (value) {
