--- a/pages/volunteer/activityStart.wxml
+++ b/pages/volunteer/activityStart.wxml
@@ -7,19 +7,21 @@
     <view class="i-cell i-input">
       <view class="i-cell-hd i-input-title">开始时间</view>
       <picker mode="multiSelector" name="start_dateTime" value="{{start_dateTime}}" bindchange="changeStartDateTime" bindcolumnchange="changeStartDateTimeColumn" range="{{dateTimeArray}}">
-        <view class="tui-picker-detail">
+        <view hidden="{{!start_dateTime}}" class="tui-picker-detail">
           {{dateTimeArray[0][start_dateTime[0]]}}-{{dateTimeArray[1][start_dateTime[1]]}}-{{dateTimeArray[2][start_dateTime[2]]}} 
           {{dateTimeArray[3][start_dateTime[3]]}}:{{dateTimeArray[4][start_dateTime[4]]}}:{{dateTimeArray[5][start_dateTime[5]]}}
         </view>
+        <view class="tui-picker-detail" hidden="{{start_dateTime}}">请选择时间</view>
       </picker>
     </view>
     <view class="i-cell i-input">
       <view class="i-cell-hd i-input-title">结束时间</view>
       <picker mode="multiSelector" name="end_dateTime" value="{{end_dateTime}}" bindchange="changeEndDateTime" bindcolumnchange="changeEndDateTimeColumn" range="{{dateTimeArray}}">
-        <view class="tui-picker-detail">
+        <view hidden="{{!end_dateTime}}" class="tui-picker-detail">
           {{dateTimeArray[0][end_dateTime[0]]}}-{{dateTimeArray[1][end_dateTime[1]]}}-{{dateTimeArray[2][end_dateTime[2]]}} 
           {{dateTimeArray[3][end_dateTime[3]]}}:{{dateTimeArray[4][end_dateTime[4]]}}:{{dateTimeArray[5][end_dateTime[5]]}}
         </view>
+        <view class="tui-picker-detail" hidden="{{end_dateTime}}">请选择时间</view>
       </picker>
     </view>
     <view class="i-cell i-input">
